# imap-pipline-core

./: .dockerignore  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  build-all.sh  build-docker.sh  build-linux.sh  build-python-versions.sh  build-windows.sh  build.sh  calibration_application_config.yml  calibration_config.yml  config-hk-download.yaml  config-hk-process.yaml  config-sci.yaml  config-sci.yml  config.yaml  config.yml  install.sh  pack.sh  pyproject.toml  pyrightconfig.json  run-docker.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
deploy/: Dockerfile  entrypoint.sh
src/: SDC.py  __init__.py  appConfig.py  appLogging.py  appUtils.py  imapProcessing.py  main.py  time.py  webPODA.py
src/imap_db/: README.md  alembic.ini  main.py  model.py
src/imap_db/migrations/: env.py
src/imap_db/migrations/versions/: 2024_07_25-d0457f3e98c8_create_files_table.py  2024_08_07-77642de1867a_added_version_date_and_software_version_.py  2024_08_09-669111c45c37_added_version_hash_date_and_software_.py
src/imap_mag/: DB.py  SDC.py  __init__.py  appConfig.py  appLogging.py  appUtils.py  imapProcessing.py  main.py  outputManager.py  sdcApiClient.py  webPODA.py
src/imap_mag/cli/: fetchBinary.py  fetchScience.py
src/imap_mag/client/: sdcDataAccess.py  webPODA.py
src/mag_toolkit/: CDFLoader.py
src/mag_toolkit/calibration/: CalibrationApplicator.py  CalibrationExceptions.py  Calibrator.py  MatlabWrapper.py  calibrationFormat.py  calibrationFormatProcessor.py
src/xtce/: tlm_20240724.xml
tests/: __init__.py  testUtils.py  test_database.py  test_fetchBinary.py  test_fetchScience.py  test_main.py  test_outputManager.py  utils.py  wiremockUtils.py  wiremock_utils.py
tests/config/: calibration_application_config.yaml  calibration_config.yaml  hk.yaml  hk_download.yaml  hk_process.yaml
tests/data/2024/: solo_L2_mag-rtn-ll-internal_20240210_V00.cdf
tests/data/2025/: MAG_HSK_PW.pkts  calibration.json  imap_mag_l1a_norm-mago_20250502_v000.cdf  imap_mag_l1b_norm-mago_20250502_v000.cdf
utils/: README.md
